fix click handler and add shift behaviour

--- a/homeworks/edelmiro-anton/10-js-dom/styles.css
+++ b/homeworks/edelmiro-anton/10-js-dom/styles.css
@@ -28,3 +28,7 @@ body {
 .textOn {
   display: block;
 }
+
+p{
+  margin: 0 auto;
+}
